add concepts images for chap2

--- a/chap2.tex
+++ b/chap2.tex
@@ -512,7 +512,7 @@ SC-коде так, как показано на рисунке \ref{fig:Path_Fi
 
   \begin{figure}[h!]
     \centering
-    \includegraphics[scale=0.3]{images/2/Concept_Graph_structure}
+    \includegraphics[scale=0.3]{images/2/concept/Graph_structure}
     \label{fig:Concept_Graph_structure}
   \end{figure}
 
@@ -604,7 +604,7 @@ SC-коде так, как показано на рисунке \ref{fig:Path_Fi
 
 \begin{figure}[h!]
   \centering
-  \includegraphics{images/2/Test1_In}
+  \includegraphics{images/2/test/1_In}
   \label{fig:Test1_In}
 \end{figure}
 
@@ -613,7 +613,7 @@ SC-коде так, как показано на рисунке \ref{fig:Path_Fi
 
 \begin{figure}[h!]
   \centering
-  \includegraphics{images/2/Test1_Out}
+  \includegraphics{images/2/test/1_Out}
   \label{fig:Test1_Out}
 \end{figure}
 
@@ -625,7 +625,7 @@ SC-коде так, как показано на рисунке \ref{fig:Path_Fi
 
 \begin{figure}[h!]
   \centering
-  \includegraphics[scale=0.7]{images/2/Test2_In}
+  \includegraphics[scale=0.7]{images/2/test/2_In}
   \label{fig:Test2_In}
 \end{figure}
 
@@ -634,7 +634,7 @@ SC-коде так, как показано на рисунке \ref{fig:Path_Fi
 
 \begin{figure}[h!]
   \centering
-  \includegraphics[scale=0.7]{images/2/Test2_Out}
+  \includegraphics[scale=0.7]{images/2/test/2_Out}
   \label{fig:Test2_Out}
 \end{figure}
 
@@ -646,7 +646,7 @@ SC-коде так, как показано на рисунке \ref{fig:Path_Fi
 
 \begin{figure}[h!]
   \centering
-  \includegraphics[scale=0.8]{images/2/Test3_In}
+  \includegraphics[scale=0.8]{images/2/test/3_In}
   \label{fig:Test3_In}
 \end{figure}
 
@@ -662,7 +662,7 @@ SC-коде так, как показано на рисунке \ref{fig:Path_Fi
 
 \begin{figure}[h!]
   \centering
-  \includegraphics[scale=0.6]{images/2/Test4_In}
+  \includegraphics[scale=0.6]{images/2/test/4_In}
   \label{fig:Test4_In}
 \end{figure}
 
@@ -672,7 +672,7 @@ SC-коде так, как показано на рисунке \ref{fig:Path_Fi
 
 \begin{figure}[h!]
   \centering
-  \includegraphics[scale=0.6]{images/2/Test4_Out}
+  \includegraphics[scale=0.6]{images/2/test/4_Out}
   \label{fig:Test4_Out}
 \end{figure}
 
@@ -684,7 +684,7 @@ SC-коде так, как показано на рисунке \ref{fig:Path_Fi
 
 \begin{figure}[h!]
   \centering
-  \includegraphics[scale=0.7]{images/2/Test5_In}
+  \includegraphics[scale=0.7]{images/2/test/5_In}
   \label{fig:Test5_In}
 \end{figure}
 
