--- a/chap2.tex
+++ b/chap2.tex
@@ -456,7 +456,8 @@ SC-коде так, как показано на рисунке \ref{fig:Path_Fi
 разговору о том, как можно обобщить представление различных видов
 графов в SC-коде.
 
-\section{Обобщение различных видов графов с использованием понятия графовой структуры}
+\section{Обобщение различных видов графов с использованием понятия
+  графовой структуры}
 
 В предыдущем разделе, когда мы искали способ представления
 минимального пути в SC-коде, то сосредоточились на представлении
@@ -516,21 +517,21 @@ SC-коде так, как показано на рисунке \ref{fig:Path_Fi
 Рисунок 1.17 Иерархия ролей элементов графовой структуры (Это неполная иерархия из OSTIS GT)
 
 Экземпляр понятия гиперграф (см. рисунок 1.15) – это такая графовая
-структура, в которой элемент с ролью связка_ может иметь в качестве
-своих компонентов только элемент с ролью \attr{вершина} этой графовой
-структуры.  На арность связок никакого ограничения не
+структура, в которой элемент с ролью \attr{связка} может иметь в
+качестве своих компонентов только элемент с ролью \attr{вершина} этой
+графовой структуры.  На арность связок никакого ограничения не
 накладывается. Для указания связки введены ролевые отношения
 \attr{гиперсвязка}, \attr{гипердуга}, \attr{гиперребро} (рисунок
 1.17). Обратите внимание на то, что на рисунке 1.17 \attr{гипердуга}
-определена как пересечение понятий гиперсвязка_ и ориентированная
-\attr{дуга}. Аналогично дела обстоят с понятием
+определена как пересечение понятий \attr{гиперсвязка} и
+ориентированная \attr{дуга}. Аналогично дела обстоят с понятием
 \attr{гиперребро}. Пожалуйста, обдумайте самостоятельно такой способ
 введения новых понятий.
 
 Экземпляр понятия псевдограф (см. рисунок 1.15) – это такой гиперграф,
 в котором гиперсвязка может иметь только два компонента.  Для указания
 связки введены ролевые отношения \attr{бинарная связка}, \attr{петля},
-\attr{дуга}_, \attr{ребро}_ (рисунок 1.17). Петлей называется бинарная
+\attr{дуга}, \attr{ребро} (рисунок 1.17). Петлей называется бинарная
 связка, у которой оба компонента одинаковы.
 
 Экземпляр понятия мультиграф (см. рисунок 1.15) – это такой
