fix errors from lacheck

--- a/chap3.tex
+++ b/chap3.tex
@@ -1,3 +1,4 @@
+
 \chapter{Демонстрация работы программы решения теоретико-графовой
   задачи в семантической памяти}
 
@@ -110,8 +111,8 @@ sc-конструкция не является корректной в сема
 Выполнение алгоритма я продемонстрирую через состояния sc-памяти на
 каждом элементарном этапе решения задачи. Для всех элементарных
 этапов, для которых это возможно, в конце их краткого описания в
-скобках будет указан соответствующий номер шага алгоритма из раздела
-\ref{sec:-Algo_desc}.
+скобках будет указан соответствующий номер шага алгоритма из
+раздела~\ref{sec:-Algo_desc}.
 
 \newenvironment{algostep}[3]
 {
@@ -124,7 +125,8 @@ sc-конструкция не является корректной в сема
     \label{fig:#2}
   \end{figure}
 }
-
+{
+}
 
 \begin{algostep}{Задание входного графа, начальной и конечной вершины
     пути для работы алгоритма}{S1_Input_graph}{0.8}
