--- a/main.tex
+++ b/main.tex
@@ -30,8 +30,7 @@
 \usepackage{cite}
 
 \usepackage{listings,fancyvrb}
-\lstset{
-  language=C++,
+\lstset{language=C++,
   basicstyle=\small\ttfamily,
   commentstyle=\color[rgb]{0,0.5,0},
   keywordstyle=\color[rgb]{0,0,1},
