add to chap4 section about search in sc-memory

--- a/chap4.tex
+++ b/chap4.tex
@@ -1193,6 +1193,423 @@ sc_retval print_content(const Content &content)
 \lstinline|sc_session::erase_content| sc-элемент будет иметь пустое
 содержимое.
 
+\subsection{Поиск в sc-памяти}
+\subsubsection{Базовые механизмы поиска по шаблону}
+
+Поиск в sc-памяти происходит по специальным шаблонам, которые
+называются ограничениями (constraint). Для перебора конкретных
+результатов поиска используется реализация идеи итераторов через
+интерфейс \lstinline|sc_iterator|, объявленный в заголовочном файле
+\verb|sc_iterator.h|:
+\begin{lstlisting}[texcl]
+/// Интерфейс итератора по различным видам sc-конструкций.
+class sc_iterator
+{
+public:
+    /// Переводит итератор на следующий результат поиска.
+    virtual sc_retval next() = 0;
+
+    /// @return true, если нет sc-конструкции, к которой можно перейти.
+    /// @return false - в противном случае.
+    virtual bool is_over() = 0;
+
+    /// @return sc-адрес sc-элемента с порядковым номером @p num
+    /// в найденной sc-конструкции.
+    virtual sc_addr value(sc_uint num) = 0;
+
+    virtual ~sc_iterator();
+};
+\end{lstlisting}
+
+Для того чтобы понять как осуществлять поиск в sc-памяти ниже мы будем
+рассматривать поиск в sc-памяти по различным видам ограничений. Первые
+ограничения, на которые мы обратим своё внимание, будут ограничения
+вида \lstinline|CONSTR_3_*_*_*|, которые используются для поиска трехэлементных
+sc-конструкций. Ограничения \lstinline|CONSTR_3_*_*_*| бывают следующие:
+\begin{itemize}
+\item \lstinline|CONSTR_3_f_a_a|
+\item \lstinline|CONSTR_3_f_a_f|
+\item \lstinline|CONSTR_3_a_a_f|
+\end{itemize}
+
+Первое, что бросается в глаза в приеденных выше названиях, это
+странный набор букв <<a>> и <<f>>. Рассмотрим
+\lstinline|CONSTR_3_f_a_a| в качестве примера. Этот вид ограничения
+используется для поиска трехэлементных sc-конструкций, а, как вы уже
+знаете, элементы таких sc-конструкций пронумерованы. Поэтому первая
+буква <<f>> в названии вида ограничения расшифровывается как
+английское слово <<fixed>> и обозначает то, что 1-ый элемент
+трехэлементной sc-конструкции известен. Вторая и третья буквы <<a>> в
+названии вида ограничения расшифровываются как английское слово
+<<assign>> и обозначают то, что 2-ой и 3-ий элементы неизвестны, и их
+необходимо найти.
+
+Посмотрим, как будет производиться поиск по такому виду
+ограничения. Для этого допустим, что содержимое одного из sc-сегментов
+как показано на рис.~\ref{fig:Data_for_CONSTR_3_f_a_a}. Так как поиск
+проходит в рамках sc-сессии, то этот sc-сегмент должен быть открыт в
+нашей sc-сессии.
+
+\begin{figure}[h!]
+  \centering
+  \includegraphics{images/4/search/Data_for_CONSTR_3_f_a_a}
+  \caption{Содержимое sc-сегмента для поиска по \lstinline|CONSTR_3_f_a_a|}
+  \label{fig:Data_for_CONSTR_3_f_a_a}
+\end{figure}
+
+Нам надо найти все константные sc-узлы, связанные константными
+позитивными sc-дугами с известным sc-узлом \vidtf{Set1}. В этом случае
+ограничения вида \lstinline|CONSTR_3_f_a_a| параметризируется
+следующим образом:
+\begin{enumerate}
+\item sc-адрес sc-узла \vidtf{Set1};
+\item \lstinline+SC_A_CONST|SC_POS+ (тип константной позитивной sc-дуги);
+\item \lstinline+SC_CONST|SC_NODE+ (тип константного sc-узла).
+\end{enumerate}
+
+Как вы возможно уже догадались, если параметр для вида ограничения
+фиксирован (fixed), то необходимо передавать sc-адрес, если параметр
+не фиксирован (assign), то необходимо передавать шаблон-маску
+\lstinline|sc_type| для поиска. Для формирования шаблона-маски
+\lstinline|sc_type| нужно применять правило <<Чем меньше признаков
+задано, тем больше будет найдено>>. Посмотрим на примерах, как
+реализуется это правило:
+\begin{itemize}
+\item \lstinline|SC_EMPTY| или \lstinline|0|: под такую маску подойдет
+  любой sc-элемент;
+\item \lstinline|SC_NODE|: под такую маску подойдет любой sc-узел;
+\item \lstinline+SC_ARC|SC_POS+: под такую маску подойдет любая
+  позитивная sc-дуга;
+\end{itemize}
+
+Вернемся к нашему примеру. Следующий код выведет на консоль
+идентификаторы всех константных sc-узлов, которые связаны с sc-узлом
+\idtf{Set1} константной позитивной sc-дугой:
+\begin{lstlisting}[texcl]
+// Создаем итератор при помощи
+// метода \verb|sc_session::create_iterator|
+sc_iterator *it = session->create_iterator(
+    // Создаем ограничение вида \verb|CONSTR_3_f_a_a|
+    sc_constraint_new(
+        CONSTR_3_f_a_a,    // вид ограничения
+        Set1,              // 1-ый параметр
+        SC_A_CONST|SC_POS, // 2-ой параметр
+        SC_CONST|SC_NODE   // 3-ий параметр
+    ),
+
+    // Указываем, что итератор удалит ограничение
+    // Здесь всегда указывайте true
+    true
+);
+
+// Типичный цикл по результатам поиска
+while (!it->is_over()) {
+
+    // !!!! \color{red}{ОБРАТИТЕ ВНИМАНИЕ}:
+    // !!!! Индексация с использованием метода
+    // !!!! \verb|sc_iterator::value| работает как в массивах, т.е. с \verb|0|
+
+    // Получаем 1-ый элемент найденной sc-конструкции
+    // Им всегда будет sc-узел Set1
+    sc_addr first = it->value(0);
+
+    // Получаем 2-ой элемент найденной sc-конструкции
+    sc_addr second = it->value(1);
+
+    // Получаем 3-ий элемент найденной sc-конструкции
+    sc_addr third = it->value(2);
+
+    // Вывод строки на консоль
+    std::cout << session->get_idtf(first) << " -> "
+        << session->get_idtf(third)  << "\n";
+
+    // Перевод итератора к следующей найденной sc-конструкции
+    it->next();
+}
+
+// !!!! \color{red}{ОБРАТИТЕ ВНИМАНИЕ}:
+// Надо обязательно освободить память, выделенную под итератор
+delete it;
+\end{lstlisting}
+
+Приведенный выше код в результате своего исполнения выведет на консоль
+(порядок может быть другим):
+\begin{verbatim}
+Set1 -> Y
+Set1 -> X
+Set1 -> Z
+\end{verbatim}
+
+В этом коде я применил следующие незнакомые для вас функции и методы:
+\begin{itemize}
+\item метод \lstinline|sc_session::create_iterator| для создания
+  итератора по sc-конструкциям, подходящим под ограничение;
+\item функцию \lstinline|sc_constraint_new| для создания ограничения
+  определенного вида. Эта функция принимает неопределенное число
+  аргументов, но первым аргументом всегда должна быть константа,
+  которая задает вид ограничения.
+\end{itemize}
+
+На основе приведенного примера мы можем построить типовой код для
+работы с объектами класса \lstinline|sc_iterator|. При помощи цикла
+\lstinline|while| это можно сделать следующим образом:
+\begin{lstlisting}[texcl]
+// Создание итератора.
+sc_iterator *it = session->create_iterator(
+    sc_constraint_new(
+        /* Здесь должны быть параметры ограничения. */
+    ),
+    true
+);
+
+while (!it->is_over()) {
+    // Получение элементов найденной sc-конструкции
+    // при помощи метода \verb|sc_iterator::value|.
+
+    // Обработка результатов поиска.
+
+    // Перевод итератора на следующий результат поиска.
+    it->next();
+}
+
+// Обязательно нужно освободить память.
+delete it;
+\end{lstlisting}
+
+Приведенный выше код можно переписать при помощи цикла \lstinline|for|
+(блок создания итератора не приведен):
+\begin{lstlisting}[texcl]
+for (; !it->is_over(); it->next()) {
+    // Получение элементов найденной sc-конструкции
+    // при помощи метода \verb|sc_iterator::value|.
+
+    // Обработка результатов поиска.
+}
+
+// Обязательно нужно освободить память.
+delete it;
+\end{lstlisting}
+
+Однако два предыдущих варианта можно переписать в более простой форме
+с использованием специального макроса \lstinline|sc_for_each| (блок
+создания итератора не приведен):
+\begin{lstlisting}[texcl]
+sc_for_each (it) {
+    // Получение элементов найденной sc-конструкции
+    // при помощи метода \verb|sc_iterator::value|.
+
+    // Обработка результатов поиска.
+}
+
+// Память освобождать не нужно, потому что она была освобождена
+// при выходе из цикла \verb|sc_for_each|.
+\end{lstlisting}
+
+Обратите внимание, что в приведенном выше цикле макрос
+\lstinline|sc_for_each| берет на себя следующую работу:
+\begin{itemize}
+\item проверка действительности итератора (вызов метода
+  \lstinline|sc_iterator::is_over|);
+\item перевод итератора на следующий результат поиска (вызов метода
+  \lstinline|sc_iterator::next|);
+\item освобождение памяти, на которую указывает \lstinline|it|, при
+  выходе из цикла.
+\end{itemize}
+
+Цикл \lstinline|sc_for_each| работает так же, как и циклы
+\lstinline|while| и \lstinline|for|, и поддерживает инструкции
+\lstinline|break| и \lstinline|continue|.  А теперь перейдем к
+рассмотрению других видов ограничений поиска, которые предоставляет
+библиотека libsc.
+
+Аналогично ограничениям вида \verb|CONSTR_3_*_*_*| существуют
+ограничения вида \verb|CONSTR_5_*_*_*_*_*| для пятиэлементных
+sc-конструкций. Ограничения \verb|CONSTR_5_*_*_*_*_*| бывают следующих
+видов:
+\begin{itemize}
+\item \lstinline|CONSTR_5_f_a_a_a_a|
+\item \lstinline|CONSTR_5_f_a_a_a_f|
+\item \lstinline|CONSTR_5_f_a_f_a_a|
+\item \lstinline|CONSTR_5_f_a_f_a_f|
+\item \lstinline|CONSTR_5_a_a_a_a_f|
+\item \lstinline|CONSTR_5_a_a_f_a_a|
+\item \lstinline|CONSTR_5_a_a_f_a_f|
+\end{itemize}
+
+Работать с такими ограничениями надо так же, как и с ограничениями
+вида \verb|CONSTR_3_*_*_*|.  Существует еще вид ограничения
+\lstinline|CONSTR_3l2_f_a_a_a_f| для поиска sc-конструкций, одна из
+которых показана на рис.~\ref{fig:CONSTR_3l2}. На
+рис.~\ref{fig:CONSTR_3l2} элементы специально занумерованы.
+
+\begin{figure}
+  \centering
+  \includegraphics{images/4/search/CONSTR_3l2}
+  \caption{ Пример sc-конструкции для ограничения вида CONSTR_3l2_f_a_a_a_f}
+  \label{fig:CONSTR_3l2}
+\end{figure}
+
+Хочу сказать еще про один вид ограничения, который называется
+\lstinline|CONSTR_ORD_BIN_CONN1| и используется для поиска связки бинарного
+отношения с фиксированным компонентом. На рисунке 2.19 показана
+типовая sc-конструкция для поиска по этому виду ограничения. Элементы
+с порядковыми номерами 1, 7 и 10 фиксированы, а для всех остальных
+задается маска типа.
+
+\begin{figure}
+  \centering
+  \includegraphics{images/4/search/CONSTR_ORD_BIN_CONN1}
+  \caption{ Пример sc--конструкции для ограничения вида CONSTR_ORD_BIN_CONN1}
+  \label{fig:CONSTR_ORD_BIN_CONN1}
+\end{figure}
+
+\subsubsection{Oneshot-поиск по шаблону}
+
+Oneshot-поиск - это поиск при помощи ограничения, при котором
+находятся не все возможные sc-конструкции, а только одна (первая
+найденная). При двух последовательных oneshot-поисках не
+гарантируется, что будет найдена одна и та же sc-конструкция. Для
+oneshot-поиска применяется специальная функция
+\lstinline|search_oneshot|. Следующий код найдет sc-узел \idtf{L} и
+входящую в него из sc-узла \idtf{Set1} переменную позитивную sc-дугу
+(см. рис.~\ref{fig:Data_for_CONSTR_3_f_a_a}):
+\begin{lstlisting}[texcl]
+sc_addr first = 0, second = 0, third = 0; 
+if (search_oneshot(session,
+            sc_constraint_new(
+                CONSTR_3_f_a_a,
+                Set1,
+                SC_ARC|SC_VAR|SC_POS,
+                SC_CONST|SC_NODE
+            ),
+            // Указываем, что экземпляр ограничения необходимо удалить
+            true,
+
+            // Количество получаемых значений
+            3,
+
+            // Порядковый номер в ограничении 1-го результата
+            0,
+            // 1-ый элемент найденной конструкции - узел Set1
+            &first,
+            
+            // Порядковый номер в ограничении 2-го результата
+            1,
+            // 2-ой элемент найденной конструкции –
+// константная позитивная sc-дуга
+            &second,
+
+            // Порядковый номер в ограничении 3-го результата
+            2,
+            // 3-ий элемент найденной конструкции –
+// константный sc-узел L
+            &third
+            ) == RV_OK) {
+        // Результат найден
+    } else {
+        // Ничего не найдено
+    }
+\end{lstlisting}
+
+Синтаксис \lstinline|search_oneshot| громоздок, поэтому для часто
+используемых oneshot-поисков созданы специальные функции:
+
+\begin{itemize}
+\item Функция \lstinline|search_3_f_cpa_f|: поиск при помощи
+  \lstinline|CONSTR_3_f_a_f|, когда для второго элемента задана маска
+  типа \lstinline+SC_A_CONST|SC_POS+
+\begin{lstlisting}[texcl]
+// В эту переменную будет занесен
+// sc-адрес найденного 2-го элемента
+sc_addr e2 = 0;
+
+if (search_3_f_cpa_f(session,
+       // 1-ый элемент известен
+       e1,
+
+       // Если что-то будет найдено, то
+       // переменная second получит в качестве значения sc-адрес
+       // найденного sc-элемента
+       &e2,
+
+       // 3-ий элемент известен
+       third
+    ) == RV_OK) {
+    // Поиск успешен
+} else {
+    // Поиск неуспешен
+}
+\end{lstlisting}
+
+\item Функция \lstinline|search_3_f_cpa_cna|: поиск при помощи
+  \lstinline|CONSTR_3_f_a_a|, когда для второго элемента задана маска
+  типа \lstinline+SC_A_CONST|SC_POS+, а для третьего -
+  \lstinline+SC_CONST|SC_NODE+
+\begin{lstlisting}[texcl]
+// В эту переменную будет занесен sc-адрес найденного 2-го элемента
+sc_addr e2 = 0;
+
+// В эту переменную будет занесен sc-адрес найденного 3-го элемента
+sc_addr e3 = 0;
+
+if (search_3_f_cpa_cna(session,
+       // 1-ый элемент известен
+       e1,
+
+       // Если что-то будет найдено в качестве 2-го элемент, то
+       // переменная second получит в качестве значения sc-адрес
+       // найденного sc-элемента
+       &e2,
+
+       // Если что-то будет найдено в качесте 3-го элемент, то
+       // переменная third получит в качестве значения sc-адрес
+       // найденного sc-элемента
+       &e3
+   ) == RV_OK) {
+   // Поиск успешен
+} else {
+   // Поиск неуспешен
+}
+\end{lstlisting}
+
+\item Функция \lstinline|search_5_f_cpa_a_cpa_f|: поиск при помощи
+  \lstinline|CONSTR_5_f_a_a_a_f|, когда для 2-го элемента задана маска
+  типа \lstinline+SC_A_CONST|SC_POS+, для 3-го - \lstinline|SC_EMPTY|
+  (нет ограничения на тип), для 4-го - \lstinline+SC_A_CONST|SC_POS+
+
+\begin{lstlisting}[texcl]
+// В эту переменную будет занесен sc-адрес найденного 2-го элемента
+sc_addr e2 = 0;
+
+// В эту переменную будет занесен sc-адрес найденного 3-го элемента
+sc_addr e3 = 0;
+
+// В эту переменную будет занесен sc-адрес найденного 4-го элемента
+sc_addr e4 = 0;
+
+if (search_5_f_cpa_a_cpa_f(
+        session,
+        e1,   // sc-адрес изввестен
+        &e2,
+        &e3,
+        &e4,
+        e5    // sc-адрес известен
+        ) == RV_OK) {
+    // Поиск успешен
+} else {
+    // Поиск неуспешен
+}
+\end{lstlisting}
+
+\item Функция \lstinline|search_5_f_cpa_сna_cpa_f|: аналогично функции
+  \lstinline|search_5_f_cpa_сna_cpa_f|, только для 3-го элемента
+  задана маска типа \lstinline+SC_NODE|SC_CONST+
+
+\item Функция \lstinline|search_3l2_f_a_a_a_f|: поиск при помощи
+  \lstinline|CONSTR_3l2_f_a_a_a_f| (функция используется так же, как и
+  все описанные выше oneshot-функции)
+\end{itemize}
+
 %%% Local Variables: 
 %%% mode: latex
 %%% TeX-master: "main"
